# gene-data-uploader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/gene_data_uploader/: __init__.py  app.py  main.py
src/gene_data_uploader/api/routes/: files.py
src/gene_data_uploader/core/: config.py
src/gene_data_uploader/db/: models.py  session.py
src/gene_data_uploader/schemas/: file.py
src/gene_data_uploader/services/: csv_utils.py
src/gene_data_uploader/storage/: base.py  factory.py  local.py
tests/: conftest.py  test_csv_utils.py  test_files_api.py
