[tool.poetry]
name = "gene-data-uploader"
version = "0.1.0"
description = "REST API for CSV file upload, metadata management, and retrieval"
authors = ["Saman Nia <saman.p.nia@gmail.com>"]
readme = "README.md"
packages = [{ include = "gene_data_uploader", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.38"
psycopg = {extras = ["binary"], version = "^3.2.9"}
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
